[FEAT] 유저의 컨설팅 자취방 사진 가져오기 API 구현
