# src/controllers/consult.controller.js
@@ -1,7 +1,7 @@
 // consult.controller.js
 import { response } from "../../config/response.js";
 import { status } from "../../config/response.status.js";
-import { getConsultingStatus, getConsultRequest } from "../providers/consult.provider.js";
+import { getConsultingStatus, getConsultRequest, getRoomImages } from "../providers/consult.provider.js";
 import { addHouseSize, addMood, addRoomNumber, addConcern, addRoomImages, addBlueprints } from "../services/consult.service.js";
 
 export const houseSizeAdd = async (req, res, next) => {
@@ -98,6 +98,16 @@ export const blueprintAdd=async(req,res,next)=>{
         res.send(response(status.SUCCESS,result));
     }catch(error){
         console.log(error);
+        next(error);
+    }
+}
+
+export const roomImageGet=async(req,res,next)=>{
+    try{
+        console.log("params",req.params);
+        const result=await getRoomImages(req.params.consulting_id);
+        res.send(response(status.SUCCESS,result));
+    }catch(error){
         next(error);
     }
 }
