# src/models/consult.dao.js
@@ -1,7 +1,7 @@
 import { pool } from "../../config/db.connect.js";
 import { BaseError } from "../../config/error.js";
 import { status } from "../../config/response.status.js";
-import { getConsultReqWithIdQ, setHouseSizeQ, setMoodQ, setRoomNumberQ, setStatusQ, setConcernQ, setRoomImageQ, getRoomImageWithIdQ, setBlueprintQ} from "./consult.sql.js";
+import { getConsultReqWithIdQ, setHouseSizeQ, setMoodQ, setRoomNumberQ, setStatusQ, setConcernQ, setRoomImageQ, getRoomImageWithIdQ, setBlueprintQ, getBlueprintWithIdQ, getRoomImageWithConsIdQ} from "./consult.sql.js";
 
 export const getConsultReq=async(id)=>{
     try{
@@ -136,3 +136,17 @@ export const getBlueprint=async(id)=>{
     }
 }
 
+export const getUserRoomImage=async(consulting_id)=>{
+    try{
+        const conn=await pool.getConnection();
+        const [result]=await pool.query(getRoomImageWithConsIdQ,consulting_id);
+        if(result.length==0){
+            return -1;
+        }
+        conn.release();
+        return result;
+    }catch(err){
+        console.log(err);
+        throw new BaseError(status.INTERNAL_SERVER_ERROR);
+    }
+}
